kubernetes/https-redirect-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: https-redirect-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      name: https-redirect
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        name: https-redirect
    spec:
      containers:
      - image: geldim/https-redirect
        name: https-redirect
        readinessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 90
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 90
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: https-redirect
spec:
  ports:
  - port: 80
  selector:
    name: https-redirect
  type: NodePort
