kubernetes/mor-web-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: mor-web-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      name: mor-web
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: mor-web
    spec:
      containers:
      - image: 'myownradio/backend-core:v2'
        name: mor-web
        livenessProbe:
          httpGet: 
            path: /
            port: 80  
          initialDelaySeconds: 90
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: / 
            port: 80
          initialDelaySeconds: 90
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: mor-web
spec:
  ports:
  - port: 80
  selector:
    name: mor-web
  type: NodePort
